Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/pharmacy/admin/amp.xhtml
+++ b/src/main/webapp/pharmacy/admin/amp.xhtml
@@ -12,7 +12,7 @@
 
         <h:panelGroup >
             <h:form  >
-                <p:panel header="Manage Pharmacy Item" styleClass="alignTop verticalAndHorizontalCenteringLarge" >
+                <p:panel header="Manage AMPs" styleClass="alignTop verticalAndHorizontalCenteringLarge" >
                     <h:panelGrid id ="gpVeda" columns="2" >
 
 
