--- a/src/main/webapp/pharmacy/admin/upload_amps_minimal.xhtml
+++ b/src/main/webapp/pharmacy/admin/upload_amps_minimal.xhtml
@@ -7,7 +7,7 @@
     <h:head>
     </h:head>
     <h:body>
-        <ui:composition template="/emr/admin/index.xhtml">
+        <ui:composition template="/pharmacy/admin/index.xhtml">
             <ui:define name="subcontent">
                 <div class="container-fluid" >
                     <div class="card" >
