--- a/src/main/webapp/pharmacy/admin/upload_atms.xhtml
+++ b/src/main/webapp/pharmacy/admin/upload_atms.xhtml
@@ -7,12 +7,12 @@
     <h:head>
     </h:head>
     <h:body>
-        <ui:composition template="/emr/admin/index.xhtml">
+       <ui:composition template="/pharmacy/admin/index.xhtml">
             <ui:define name="subcontent">
                 <div class="container-fluid" >
                     <div class="card" >
                         <div class="card-header" >
-                            <h2>Upload VTMs</h2>
+                            <h2>Upload ATMs</h2>
                         </div>
                         <div class="card-body" >
                             <h:form enctype="multipart/form-data">
@@ -20,10 +20,12 @@
                                               mode="simple"
                                               label="Choose File"/>
                                 <p:commandButton value="Upload"
-                                                 action="#{dataUploadBean.uploadVtms()}"
+                                                 action="#{dataUploadBean.uploadAtms()}"
                                                  ajax="false"/>
                             </h:form>
 
+                            <p>#{dataUploadBean.outputString}</p>
+                            
                             <table class="table">
                                 <thead>
                                     <tr>
@@ -40,6 +42,11 @@
                                     </tr>
                                     <tr>
                                         <td>2</td>
+                                        <td>ATM</td>
+                                        <td>ATM name. (Trade Name) Required.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
                                         <td>VTM</td>
                                         <td>VTM name. (Generic Name) Required.</td>
                                     </tr>
