--- a/src/main/webapp/pharmacy/admin/unit.xhtml
+++ b/src/main/webapp/pharmacy/admin/unit.xhtml
@@ -7,7 +7,7 @@
     <h:head>
     </h:head>
     <h:body>
-        <ui:composition template="/emr/admin/index.xhtml">
+        <ui:composition template="/pharmacy/admin/index.xhtml">
             <ui:define name="subcontent">
 
                 <h:form id="measurementUnitForm">
