--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -15,7 +15,8 @@
                     <div class="row">
                         <div class="col-md-3">
                             <h:form>
-                                <p:accordionPanel activeIndex="#{opdController.opdSummaryIndex}">
+                                <p:accordionPanel activeIndex="#{cashierReportController.reportCashierIndex}">
+                                    <p:ajax process="@this"></p:ajax>
                                     <p:tab title="Common Reports">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" 
