--- a/src/main/webapp/cashTransaction/cash_out.xhtml
+++ b/src/main/webapp/cashTransaction/cash_out.xhtml
@@ -77,7 +77,7 @@
                             </f:facet>
                             <h:panelGrid columns="2">      
                                 <h:outputLabel value="To Cashier"/>
-                                <p:autoComplete converter="webUs" 
+                                <p:autoComplete  
                                                 completeMethod="#{webUserController.completeUser}" 
                                                 forceSelection="true"
                                                 var="w" 
