--- a/src/main/webapp/opd_search_user_bills.xhtml
+++ b/src/main/webapp/opd_search_user_bills.xhtml
@@ -48,7 +48,7 @@
 
                                 <h:panelGrid columns="2" >
                                     <h:outputLabel value="User Name"/>
-                                    <p:autoComplete id="cmbUser" converter="webUs" 
+                                    <p:autoComplete id="cmbUser"  
                                                     forceSelection="true"
                                                     completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                                     var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
