--- a/src/main/webapp/reportCashier/report_cashier_summery_by_user_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_by_user_by_reciptno.xhtml
@@ -50,7 +50,7 @@
                             <p:inputText id="trn" value="#{commonReport.toReciptNo}" />
 
                             <h:outputLabel styleClass="noPrintButton" value="User Name"/>
-                            <p:autoComplete converter="webUs" completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
+                            <p:autoComplete  completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                             forceSelection="true"
                                             var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
                                             value="#{commonReport.webUser}" ></p:autoComplete>
