--- a/src/main/webapp/reportIncome/billfee_type_summery.xhtml
+++ b/src/main/webapp/reportIncome/billfee_type_summery.xhtml
@@ -41,7 +41,7 @@
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="User"/>
-                                    <p:autoComplete id="cmbUser" converter="webUs" placeholder="All Users"
+                                    <p:autoComplete id="cmbUser"  placeholder="All Users"
                                                     forceSelection="true" inputStyle="width:190px;"
                                                     completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                                     var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
