--- a/src/main/webapp/admin/staff/admin_user_staff.xhtml
+++ b/src/main/webapp/admin/staff/admin_user_staff.xhtml
@@ -25,7 +25,7 @@
                 <p:panel header="Allow user to log on to Departments" >
                     <h:panelGrid  columns="2">                          
                         <h:outputLabel value="Select User"/>
-                        <p:autoComplete id="user" converter="webUs" forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  value="#{webUserController.current}" >
+                        <p:autoComplete id="user"  forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  value="#{webUserController.current}" >
                             <f:ajax event="itemSelect" execute="user" render="ins" />
                         </p:autoComplete>
                     </h:panelGrid>
