--- a/src/main/webapp/admin/users/user_payment_schemes.xhtml
+++ b/src/main/webapp/admin/users/user_payment_schemes.xhtml
@@ -18,7 +18,7 @@
                 <p:panel header="Allowed Payment Schemes for Users" >
                     <h:panelGrid  columns="2" >                          
                         <h:outputLabel value="Select User"/>
-                        <p:autoComplete id="user" converter="webUs" forceSelection="true" 
+                        <p:autoComplete id="user"  forceSelection="true" 
                                         completeMethod="#{webUserController.completeUser}" var="us"
                                         itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  
                                         value="#{userPaymentSchemeController.selectedUser}" >
