--- a/src/main/webapp/admin/users/user_privileges.xhtml
+++ b/src/main/webapp/admin/users/user_privileges.xhtml
@@ -35,7 +35,7 @@
 
                             <h:panelGrid  columns="2" >                          
 
-                                <p:autoComplete id="user" converter="webUs" forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" 
+                                <p:autoComplete id="user"  forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" 
                                                 itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  
                                                 value="#{userPrivilageController.currentWebUser}" >
                                     <f:ajax event="itemSelect" execute="user" render="tree" />
