--- a/src/main/webapp/channel/channel_report_by_fee.xhtml
+++ b/src/main/webapp/channel/channel_report_by_fee.xhtml
@@ -28,7 +28,7 @@
                     <p:calendar id="toDate" value="#{channelReportController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" >
                     </p:calendar>
                     <h:outputLabel styleClass="noPrintButton" value="User Name"/>
-                    <p:autoComplete converter="webUs" completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
+                    <p:autoComplete  completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                     forceSelection="true"
                                     var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
                                     value="#{channelReportController.webUser}" >
