--- a/src/main/webapp/channel/channel_report_cashier_summery.xhtml
+++ b/src/main/webapp/channel/channel_report_cashier_summery.xhtml
@@ -43,7 +43,7 @@
                                             value="#{channelReportController.webUser}" id="scStaff"
                                             completeMethod="#{webUserController.completeUser}" var="mys" 
                                             itemLabel="#{mys.webUserPerson.name}" itemValue="#{mys}"
-                                            converter="webUs" styleClass="noPrintButton"  >                                            
+                                             styleClass="noPrintButton"  >                                            
                             </p:autoComplete>
 
                             <p:commandButton id="btnProcess" ajax="false" value="Process" styleClass="noPrintButton" 
