--- a/src/main/webapp/channel/channel_report_cashier_summery_date.xhtml
+++ b/src/main/webapp/channel/channel_report_cashier_summery_date.xhtml
@@ -40,7 +40,7 @@
                             <p:ajax event="change" process="@this" update="pan1" listener="#{channelReportTempController.listnerHos()}" />
                         </p:selectBooleanCheckbox>
                         <h:outputLabel styleClass="noPrintButton" value="User Name"/>
-                        <p:autoComplete converter="webUs" completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
+                        <p:autoComplete  completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                         forceSelection="true"
                                         var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
                                         value="#{channelReportTempController.reportKeyWord.webUser}" ></p:autoComplete>
