--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -33,7 +33,7 @@
                                             <p:commandButton class="w-100" ajax="false" value="4) All Cashier Summary " action="#{cashierReportController.navigateToAllCashierSummary()}" actionListener="#{cashierReportController.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="4.1) All Cashier Summary(Using Recipt No) " action="#{cashierReportController.navigateToAllCashierSummaryOnlyByReciptNo()}" actionListener="#{cashierReportController.recreteModal2}"/>
                                             <p:commandButton class="w-100" ajax="false" value="5) All Cashier Summary Without Professional" action="#{cashierReportController.navigateToReportCashierSummeryAllTotalOnlyWithoutPro()}" actionListener="#{cashierReportController.recreteModal}"/>
-                                            <p:commandButton class="w-100" ajax="false" value="6) Bill List" action="/opd_search_user_bills.xhtml"/>
+                                            <p:commandButton class="w-100" ajax="false" value="6) Bill List" action="#{cashierReportController.navigateToOpdSearchUserBills()}"/>
                                             <p:commandButton class="w-100" ajax="false" value="7) Cashier Service Count Report" action="report_cashier_item_count_by_user.xhtml"/>
                                             <p:commandButton class="w-100" ajax="false" value="8) Bill Type Summery" action="/reportIncome/bill_type_summery.xhtml"/>
                                         </div>
