--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -35,12 +35,12 @@
                                             <p:commandButton class="w-100" ajax="false" value="5) All Cashier Summary Without Professional" action="#{cashierReportController.navigateToReportCashierSummeryAllTotalOnlyWithoutPro()}" actionListener="#{cashierReportController.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="6) Bill List" action="#{cashierReportController.navigateToOpdSearchUserBills()}"/>
                                             <p:commandButton class="w-100" ajax="false" value="7) Cashier Service Count Report" action="#{cashierReportController.navigateToReportCashierItemCountByUser()}"/>
-                                            <p:commandButton class="w-100" ajax="false" value="8) Bill Type Summery" action="/reportIncome/bill_type_summery.xhtml"/>
+                                            <p:commandButton class="w-100" ajax="false" value="8) Bill Type Summery" action="#{cashierReportController.navigateToBillTypeSummery()}"/>
                                         </div>
                                     </p:tab>
                                     <p:tab title="1) Cashier Reports">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100" ajax="false" value="1) Cashier Report" action="report_cashier_detailed_by_user.xhtml" actionListener="#{commonReport.recreteModal}"/>
+                                            <p:commandButton class="w-100" ajax="false" value="1) Cashier Report" action="#{cashierReportController.navigateToReportcashierDetailedByUser()}" actionListener="#{commonReport.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="1.1) Cashier Report(Using Recipt No)" action="report_cashier_detailed_by_user_by_reciptno.xhtml" actionListener="#{commonReport.recreteModal2}"/>
                                             <p:commandButton class="w-100" ajax="false" value="2) Cashier Summary" action="report_cashier_summery_by_user" actionListener="#{commonReport.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="2.1) Cashier Summary(Using Recipt No)" action="report_cashier_summery_by_user_by_reciptno" actionListener="#{commonReport.recreteModal2}"/>
