--- a/src/main/webapp/pharmacy/admin/vmpp_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/vmpp_multiple.xhtml
@@ -9,11 +9,11 @@
     <ui:define name="subcontent">
         <h:form  >
 
-            <!-- For ATMs -->
+            <!-- For Vmpp -->
             <p:dataTable 
-                value="#{pharmacyController.atms}" 
+                value="#{pharmacyController.vmpps}" 
                 var="i"
-                selection="#{pharmacyController.atmsSelected}"
+                selection="#{pharmacyController.vmppsSelected}"
                 rowKey="#{i.id}"
                 rows="5"
                 paginator="true" 
@@ -24,10 +24,10 @@
                 >
                 <f:facet name="header">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h:outputText value="ATMs" />
+                        <h:outputText value="Vmpps" />
                         <p:commandButton 
                             value="Remove Selected" 
-                            action="#{pharmacyController.deleteMultipleAtms()}"
+                            action="#{pharmacyController.deleteMultipleVmpps()}"
                             ajax="false"
                             onclick="if (!confirm('Are you sure you want to delete this record?'))
                                         return false;" 
@@ -48,10 +48,10 @@
                     <p:commandButton 
                         ajax="false" 
                         value="Delete" 
-                        action="#{pharmacyController.deleteSingleAtm()}" >
+                        action="#{pharmacyController.deleteSingleVmpp()}" >
                         <f:setPropertyActionListener 
                             value="#{i}" 
-                            target="#{pharmacyController.atm}" ></f:setPropertyActionListener>
+                            target="#{pharmacyController.vmpp}" ></f:setPropertyActionListener>
                     </p:commandButton>
                 </p:column>
             </p:dataTable>
