--- a/src/main/webapp/pharmacy/admin/vtm_multiple.xhtml
+++ b/src/main/webapp/pharmacy/admin/vtm_multiple.xhtml
@@ -1,76 +1,63 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:se="http://java.sun.com/jsf/composite/pharmacy/search">
-    <h:body>
-        <ui:composition template="/pharmacy/admin/index.xhtml">
-            <ui:define name="subcontent">
-                <h:panelGroup >
-                    <h:form id="form"  >
-                        <p:growl />
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h2>Manage Virtual Therapeutic Moiety (VTMs)</h2>
-                                    <div class="card mb-3">
-                                        <div class="card-header">Search Vtm</div>
-                                        <div class="card-body">
-                                            <h:inputText autocomplete="off" id="txtSearch" value="#{vtmController.selectText}" class="form-control" >
-                                                <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                            </h:inputText>
-                                            <p:selectOneListbox  style="height: 100%;" converter="vtm"  id="lstSelect" value="#{vtmController.current}" >
-                                                <f:selectItems  value="#{vtmController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                                <p:ajax event="change"   update="gpDetail" process="lstSelect" >
-                                                </p:ajax>
-                                            </p:selectOneListbox>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="d-flex justify-content-between">
-                                                <h:commandButton id="btnAdd" value="Add" action="#{vtmController.prepareAdd()}" styleClass="buttons btn btn-primary" >
-                                                    <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
-                                                    </f:ajax>
-                                                </h:commandButton>
-                                                <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                            return false;" action="#{vtmController.delete()}"  value="Delete" class="btn btn-danger" >
-                                                </h:commandButton>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-md-6">
-                                    <h:panelGroup id="gpDetail" >
-                                        <div class="card">
-                                            <div class="card-header d-flex justify-content-between">
-                                                <h3>Edit Details</h3>
-                                                <p:commandButton id="btnSave" value="Save"  action="#{vtmController.saveSelected()}" styleClass="buttons btn btn-primary" 
-                                                                 ajax="false" >
-                                                </p:commandButton>
-                                                <p:defaultCommand target="btnSave"/>
-                                            </div>
-                                            <div class="card-body">
-
-                                                <div class="mb-3">
-                                                    <label for="lblName" class="form-label">Name</label>
-                                                    <h:inputText autocomplete="off" id="txtName" value="#{vtmController.current.name}" required="true" class="form-control" ></h:inputText>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </h:panelGroup>
-                                </div>
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="/pharmacy/admin/index.xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:p="http://primefaces.org/ui">
+    <ui:define name="subcontent">
+        <h:form  >
 
 
 
-                            </div>
-                        </div>
-                    </h:form>
-                </h:panelGroup>
-            </ui:define>
-        </ui:composition>
-    </h:body>
-</html>
+            <!-- For VTMs -->
+            <p:dataTable 
+                value="#{pharmacyController.vtms}" 
+                var="i"
+                selection="#{pharmacyController.vtmsSelected}"
+                rowKey="#{i.id}"
+                rows="5"
+                paginator="true" 
+                paginatorPosition="both"
+                paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
+                rowsPerPageTemplate="5,10,{ShowAll|'All'}"
+                >
+                <f:facet name="header">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h:outputText value="VTMs" />
+                        <p:commandButton 
+                            value="Remove Selected" 
+                            action="#{pharmacyController.deleteMultipleVtms()}"
+                            ajax="false"
+                            onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        return false;" 
+                            />
+                    </div>
+                </f:facet>
+                <p:column 
+                    selectionMode="multiple" width="50" >
+                </p:column>
+                <p:column 
+                    headerText="Name" 
+                    sortBy="#{i.name}"
+                    filterBy="#{i.name}"
+                    filterMatchMode="contains">
+                    <h:outputText value="#{i.name}" ></h:outputText>
+                </p:column>
+                <p:column headerText="Actions" >
+                    <p:commandButton 
+                        ajax="false" 
+                        value="Delete" 
+                        action="#{pharmacyController.deleteSingleVtm()}" >
+                        <f:setPropertyActionListener 
+                            value="#{i}" 
+                            target="#{pharmacyController.vtm}" ></f:setPropertyActionListener>
+                    </p:commandButton>
+                </p:column>
+            </p:dataTable>
+
+        </h:form>
+    </ui:define>
+</ui:composition>
